[package]
name = "websocket_server"
version = "0.1.0"
edition = "2021"

[dependencies]
salvo = { version = "0.75", features = ["websocket"] }
tokio = { version = "1.36", features = ["full"] }
dotenv = "0.15"
once_cell = "1.18"
futures-util = "0.3"
tokio-stream = "0.1"
chrono = "0.4"

[profile.release]
opt-level = "z"  # 使用 "z" 进行大小优化
lto = true       # 启用链接时优化
panic = "abort"
